--- a/src/main/resources/templates/item/delivery.html
+++ b/src/main/resources/templates/item/delivery.html
@@ -3,13 +3,129 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="/css/top.css">
+    <link rel="stylesheet" type="text/css" href="/css/delivery.css">
     <title>배송/결제</title>
 </head>
 <body>
 <div th:replace="~{inc/top}"></div>
 <section>
-
+    <h3>주문</h3>
+    <table>
+        <tr>
+            <th>이름</th>
+            <td>이름이름</td>
+        </tr>
+        <tr>
+            <th>전화번호</th>
+            <td>전화번호</td>
+        </tr>
+    </table>
+    <h3>배송지</h3>
+    <table class="deli_table">
+        <tr>
+            <th>받는사람</th>
+            <td><input type="text" name="deli_name"></td>
+        </tr>
+        <tr>
+            <th>전화번호</th>
+            <td>
+                <input type="text" name="tel1" style="width: 50px;">
+                -
+                <input type="text" name="tel2" style="width: 50px;">
+                -
+                <input type="text" name="tel3" style="width: 50px;">
+            </td>
+        </tr>
+        <tr>
+            <th>주소</th>
+            <td class="address1">
+                <div>
+                <input type="text" name="add1" id="sample6_postcode" placeholder="우편번호" >
+                <input type="button" onclick="sample6_execDaumPostcode()" value="우편번호 찾기">
+                </div>
+                <div>
+                <input type="text" name="add2" id="sample6_address" placeholder="주소" style="width: 350px;">
+                </div>
+                <div>
+                <input type="text" name="add3" id="sample6_detailAddress" placeholder="상세주소">
+                <input type="text" id="sample6_extraAddress" placeholder="참고항목">
+                </div>
+            </td>
+        </tr>
+        <tr>
+            <th>배송 메세지</th>
+            <td><textarea></textarea></td>
+        </tr>
+    </table>
+    <h3>배송 상품</h3>
+    <table>
+        <tr>
+            <td>상품들 좌라락</td>
+        </tr>
+    </table>
+    <h3>결제 금액</h3>
+    <table>
+        <tr>
+            <th>결제 수단</th>
+            <td><input type="radio" name="cash">예치금</td>
+        </tr>
+        <tr>
+            <th>결제 금액</th>
+            <td>금액금액</td>
+        </tr>
+    </table>
+    <div class="cash"><input type="button" value="결제"></div>
 </section>
 <div th:replace="~{inc/footer}"></div>
 </body>
+<script src="//t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
+<script>
+    function sample6_execDaumPostcode() {
+        new daum.Postcode({
+            oncomplete: function(data) {
+                // 팝업에서 검색결과 항목을 클릭했을때 실행할 코드를 작성하는 부분.
+
+                // 각 주소의 노출 규칙에 따라 주소를 조합한다.
+                // 내려오는 변수가 값이 없는 경우엔 공백('')값을 가지므로, 이를 참고하여 분기 한다.
+                var addr = ''; // 주소 변수
+                var extraAddr = ''; // 참고항목 변수
+
+                //사용자가 선택한 주소 타입에 따라 해당 주소 값을 가져온다.
+                if (data.userSelectedType === 'R') { // 사용자가 도로명 주소를 선택했을 경우
+                    addr = data.roadAddress;
+                } else { // 사용자가 지번 주소를 선택했을 경우(J)
+                    addr = data.jibunAddress;
+                }
+
+                // 사용자가 선택한 주소가 도로명 타입일때 참고항목을 조합한다.
+                if(data.userSelectedType === 'R'){
+                    // 법정동명이 있을 경우 추가한다. (법정리는 제외)
+                    // 법정동의 경우 마지막 문자가 "동/로/가"로 끝난다.
+                    if(data.bname !== '' && /[동|로|가]$/g.test(data.bname)){
+                        extraAddr += data.bname;
+                    }
+                    // 건물명이 있고, 공동주택일 경우 추가한다.
+                    if(data.buildingName !== '' && data.apartment === 'Y'){
+                        extraAddr += (extraAddr !== '' ? ', ' + data.buildingName : data.buildingName);
+                    }
+                    // 표시할 참고항목이 있을 경우, 괄호까지 추가한 최종 문자열을 만든다.
+                    if(extraAddr !== ''){
+                        extraAddr = ' (' + extraAddr + ')';
+                    }
+                    // 조합된 참고항목을 해당 필드에 넣는다.
+                    document.getElementById("sample6_extraAddress").value = extraAddr;
+
+                } else {
+                    document.getElementById("sample6_extraAddress").value = '';
+                }
+
+                // 우편번호와 주소 정보를 해당 필드에 넣는다.
+                document.getElementById('sample6_postcode').value = data.zonecode;
+                document.getElementById("sample6_address").value = addr;
+                // 커서를 상세주소 필드로 이동한다.
+                document.getElementById("sample6_detailAddress").focus();
+            }
+        }).open();
+    }
+</script>
 </html>
