--- a/src/main/resources/templates/member/item_list.html
+++ b/src/main/resources/templates/member/item_list.html
@@ -16,7 +16,7 @@
             <a th:href="@{|/member/item_view/${list.idx}|}">
                 <div th:each = "fileName: ${list.storedFileName}"><img th:src="@{|/thumbnail/${fileName}|}" alt=""></div>
                 <div>[[${list.item_name}]]</div>
-                <div th:text="${#numbers.formatInteger(list.item_price, 0, 'COMMA')}"></div>
+                <div th:text="${#numbers.formatInteger(list.item_price, 0, 'COMMA')}+'원'"></div>
             </a>
         </div>
     </div>
