--- a/src/main/resources/templates/item/cart.html
+++ b/src/main/resources/templates/item/cart.html
@@ -23,25 +23,25 @@
             <tr th:each="cart, cartStat : ${cart}">
                 <td>
                     <input type="hidden" id="cart_idx" name="idx" th:value="${cart.idx}">
-                    <input type="checkbox" name="check" th:value="${cart.idx}" checked="checked">
+                    <input type="checkbox" th:id="'check'+${cart.idx}" name="check" th:value="${cart.idx}" checked="checked">
                 </td>
                 <td>
                     <span th:text="${cart.item_name}"></span>
                     <span th:each="fileName: ${cart.storedFileName}"><img th:src="@{|/thumbnail/${fileName}|}" alt="" style="width:50px;"></span>
                 </td>
-                <td th:id="'price'+${cart.item_idx}" th:text="${#numbers.formatInteger(cart.item_price, '0', 'COMMA')}+'원'">금액</td>
+                <td th:id="'price'+${cart.idx}" th:text="${#numbers.formatInteger(cart.item_price, '0', 'COMMA')}+'원'">금액</td>
                 <td>
-                    <input type="button" value="-" th:onclick="'count(\'minus\', \'quantity' + ${cart.item_idx} + '\', \'price' + ${cart.item_idx} + '\', \'totalPrice' + ${cart.item_idx} + '\')'">
-                    <span th:id="'quantity' + ${cart.item_idx}" th:text="${cart.item_quantity}"></span>
-                    <input type="button" value="+" th:onclick="'count(\'plus\', \'quantity' + ${cart.item_idx} + '\', \'price' + ${cart.item_idx} + '\', \'totalPrice' + ${cart.item_idx} + '\')'">
+                    <input type="button" value="-" th:onclick="'count(\'minus\', \'quantity' + ${cart.idx} + '\', \'price' + ${cart.idx} + '\', \'totalPrice' + ${cart.idx} + '\')'">
+                    <span th:id="'quantity' + ${cart.idx}" th:text="${cart.item_quantity}"></span>
+                    <input type="button" value="+" th:onclick="'count(\'plus\', \'quantity' + ${cart.idx} + '\', \'price' + ${cart.idx} + '\', \'totalPrice' + ${cart.idx} + '\')'">
 
                 </td>
-                <td th:id="'totalPrice'+${cart.item_idx}" class="price" th:text="${#numbers.formatInteger(cart.item_price * cart.item_quantity, 0, 'COMMA')}+'원'"></td>
+                <td th:id="'totalPrice'+${cart.idx}" class="price" th:text="${#numbers.formatInteger(cart.item_price * cart.item_quantity, 0, 'COMMA')}+'원'"></td>
                 <td><a th:href="@{/cart/delete/{cart_idx}(cart_idx = ${cart.idx})}">삭제</a></td>
             </tr>
             <tr>
                 <td colspan="4" style="text-align:right; border-right:hidden;">총 금액</td>
-                <td colspan="2" id="cartTotalPrice" style="text-align:right; border-left:hidden;">0</td>
+                <td colspan="2" id="cartTotalPrice" style="text-align:right; border-left:hidden;">0원</td>
             </tr>
         </table>
         <div>
@@ -54,64 +54,85 @@
 </body>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script>
-var price = document.getElementsByClassName("price");
-var sum = 0;
-    for(var i=0; i<price.length; i++)
-    {
-        sum += parseInt(price[i].innerText.replace(/,/g, ''))
-    }
-let cartSum = sum.toLocaleString('ko-KR');
-document.getElementById("cartTotalPrice").innerHTML = cartSum + '원';
+    var price3 = document.getElementsByClassName("price");
+        var sum = 0;
+            for(var i=0; i<price3.length; i++)
+            {
+                sum += parseInt(price3[i].innerText.replace(/,/g, ''))
+            }
+        let cartSum = sum.toLocaleString('ko-KR');
+        document.getElementById("cartTotalPrice").innerText = cartSum
 
-function count(type, quantityId, priceId, totalPriceId) {
+        $(document).ready(function(){
+            $('input[type="checkbox"]').click(function(){
+            updateTotalAmount();
+            });
+        });
 
-    var cart_idx = Number(document.getElementById('cart_idx').value);
+        function updateTotalAmount(){
+            var totalAmount = 0;
+            $('input[type="checkbox"]:checked').each(function(){
+                var idx = $(this).val();
+                var priceStr = $('#totalPrice' + idx).text();
+                var price = parseInt(priceStr.replace(/[^\d]+/g, ''));
+                totalAmount += price;
+            });
+            $('#cartTotalPrice').text(totalAmount.toLocaleString('ko-KR')+'원');
 
-    let quantity = document.getElementById(quantityId);
-    let item_quantity = parseInt(quantity.innerText);
+        };
 
-    let priceElement = document.getElementById(priceId);
-    let price = parseFloat(priceElement.innerText.replace(/,/g, ''));
 
-    let totalPriceElement = document.getElementById(totalPriceId);
-    let cartPrice = document.getElementById('cartTotalPrice').innerText;
 
-    if (type === 'plus') {
-        item_quantity += 1;
-    } else if (type === 'minus') {
-        if (item_quantity > 1) {
-            item_quantity -= 1;
-        }else{
-            alert("1개 이상 구매가 가능합니다.");
-            return;
+
+        function count(type, quantityId, priceId, totalPriceId) {
+            var cart_idx = Number(document.getElementById('cart_idx').value);
+
+
+            let quantity = document.getElementById(quantityId);
+            let item_quantity = parseInt(quantity.innerText);
+
+            let priceElement = document.getElementById(priceId);
+            let price = parseFloat(priceElement.innerText.replace(/,/g, ''));
+
+            let totalPriceElement = document.getElementById(totalPriceId);
+            let cartPrice = document.getElementById('cartTotalPrice').innerText;
+
+            if (type === 'plus') {
+                item_quantity += 1;
+            } else if (type === 'minus') {
+                if (item_quantity > 1) {
+                    item_quantity -= 1;
+                }else{
+                    alert("1개 이상 구매가 가능합니다.");
+                    return;
+                }
+            }
+
+            quantity.innerText = item_quantity;
+
+            let totalPrice = item_quantity * price;
+            totalPriceElement.innerText = totalPrice.toLocaleString('ko-KR') + '원';
+
+            var price2 = document.getElementsByClassName("price");
+            var sum2 = 0;
+                for(var a=0; a<price2.length; a++)
+                {
+                    sum2 += parseInt(price2[a].innerText.replace(/,/g, ''))
+                }
+            let cartSum2 = sum2.toLocaleString('ko-KR');
+            document.getElementById("cartTotalPrice").innerHTML = cartSum2 + '원';
+
+            $.ajax({
+                url: '/item/cart_modify',
+                type: 'POST',
+                data: {cart_idx : cart_idx, item_quantity : item_quantity},
+                success: function(result){
+
+                },
+                error: function(){
+                    console.log('Failed');
+                }
+            });
         }
-    }
-
-    quantity.innerText = item_quantity;
-
-    let totalPrice = item_quantity * price;
-    totalPriceElement.innerText = totalPrice.toLocaleString('ko-KR') + '원';
-
-    var price2 = document.getElementsByClassName("price");
-    var sum2 = 0;
-        for(var a=0; a<price2.length; a++)
-        {
-            sum2 += parseInt(price2[a].innerText.replace(/,/g, ''))
-        }
-    let cartSum2 = sum2.toLocaleString('ko-KR');
-    document.getElementById("cartTotalPrice").innerHTML = cartSum2 + '원';
-
-    $.ajax({
-        url: '/item/cart_modify',
-        type: 'POST',
-        data: {cart_idx : cart_idx, item_quantity : item_quantity},
-        success: function(result){
-
-        },
-        error: function(){
-            console.log('Failed');
-        }
-    });
-}
 </script>
 </html>
