--- a/src/main/resources/static/css/delivery.css
+++ b/src/main/resources/static/css/delivery.css
@@ -1,17 +1,20 @@
+
 table{
     margin: 0 auto;
     align: center;
     width: 800px;
+    border: 1px solid black;
+    border-collapse: collapse;
+}
+table tr th{
+    text-align: center;
+    width: 30%;
 }
 .deli_table{
     text-align: left;
 }
-
-.address1{
-    display: grid;
-    grid-template-columns: 1fr;
-    text-align: left;
-}
 .cash{
     align: center;
+    padding: 30px 0 30px 0;
+
 }
