--- a/src/main/resources/templates/inc/top.html
+++ b/src/main/resources/templates/inc/top.html
@@ -22,7 +22,10 @@
     </div>
     <div id="top2">
         <div><a href="/"><img src="/images/logo.png" alt="" style="width:30%"></a></div>
-        <div id="top3"><input type="text" name="totalsearch"><button>검색</button></div>
+        <div id="top3" class="search">
+            <input type="text" id="search" placeholder="검색어 입력">
+            <img id="searchImg" src="https://s3.ap-northeast-2.amazonaws.com/cdn.wecode.co.kr/icon/search.png">
+        </div>
     </div>
 </header>
 <nav>
