--- a/src/main/resources/templates/member/item_view.html
+++ b/src/main/resources/templates/member/item_view.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" layout:decorate="~{layout/layout}"
+      layout:fragment="Content"  xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" type="text/css" href="/css/top.css">
     <link rel="stylesheet" type="text/css" href="/css/mem_item_view.css">
     <title>상품 정보</title>
 </head>
 <body>
-<div th:replace="~{inc/top}"></div>
 <section>
     <div id="view">
         <div>
@@ -53,7 +52,6 @@
     <div>상세정보</div>
     <div>[[${list.item_content}]]</div>
 </section>
-<div th:replace="~{inc/footer}"></div>
 </body>
 <script th:inline="javascript">
 var slideIndex = 1;
