--- a/src/main/resources/templates/admin/item_list.html
+++ b/src/main/resources/templates/admin/item_list.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" layout:decorate="~{layout/layout_admin}"
+      layout:fragment="Content"  xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" type="text/css" th:href="@{/css/admin_top.css}">
     <link rel="stylesheet" type="text/css" href="/css/table.css">
     <title>제품 목록</title>
 </head>
 <body>
-<div th:replace="~{inc/admin_top}"></div>
 <section>
     <div><h3>상품 목록</h3></div>
     <table border="1">
@@ -49,6 +48,5 @@
     <!-- 마지막 페이지로 이동 -->
     <a th:href="@{/admin/item_list(page=${list.totalPages})}">▶</a>
 </section>
-<div th:replace="~{inc/footer}"></div>
 </body>
 </html>
