--- a/src/main/resources/templates/admin/item_view.html
+++ b/src/main/resources/templates/admin/item_view.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" layout:decorate="~{layout/layout_admin}"
+      layout:fragment="Content"  xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" type="text/css" href="/css/admin_top.css">
     <link rel="stylesheet" type="text/css" href="/css/abmin_item_view.css">
     <title>상품 수정</title>
 </head>
 <body>
-<div th:replace="~{inc/admin_top}"></div>
 <section>
     <form th:action="@{|/admin/item_modify_proc/${idx}|}" method="post" enctype="multipart/form-data">
     <table>
@@ -87,7 +86,6 @@
     </table>
     </form>
 </section>
-<div th:replace="~{inc/footer}"></div>
 </body>
 <script>
     function test(id){
