--- a/src/main/resources/templates/item/buy_item.html
+++ b/src/main/resources/templates/item/buy_item.html
@@ -1,15 +1,13 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" layout:decorate="~{layout/layout}"
+      layout:fragment="Content"  xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" type="text/css" href="/css/top.css">
     <title>주문 조회</title>
 </head>
 <body>
-<div th:replace="~{inc/top}"></div>
 <section>
     <div><h3>주문 조회</h3></div>
 </section>
-<div th:replace="~{inc/footer}"></div>
 </body>
 </html>
