--- a/src/main/resources/templates/item/cart.html
+++ b/src/main/resources/templates/item/cart.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" layout:decorate="~{layout/layout}"
+      layout:fragment="Content"  xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" type="text/css" href="/css/top.css">
     <link rel="stylesheet" type="text/css" href="/css/table.css">
     <title>장바구니</title>
 </head>
 <body>
-<div th:replace="~{inc/top}"></div>
 <section>
     <form action="/item/delivery" method="get">
     <div><h3>장바구니</h3></div>
@@ -52,7 +51,6 @@
     </div>
     </form>
 </section>
-<div th:replace="~{inc/footer}"></div>
 </body>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script>
