--- a/src/main/resources/templates/member/item_list.html
+++ b/src/main/resources/templates/member/item_list.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" layout:decorate="~{layout/layout}"
+      layout:fragment="Content"  xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" type="text/css" href="/css/top.css">
     <link rel="stylesheet" type="text/css" href="/css/mem_item_list.css">
     <title>상품 목록</title>
 </head>
 <body>
-<div th:replace="~{inc/top}"></div>
 <section>
     <div><h3>상품 목록</h3></div>
     <div id="item_list">
@@ -43,6 +42,5 @@
     <a th:href="@{/member/item_list/{idx}(idx=${category_idx}, page=${list.totalPages})}">▶</a>
     </div>
 </section>
-<div th:replace="~{inc/footer}"></div>
 </body>
 </html>
