--- a/src/main/resources/templates/member/login.html
+++ b/src/main/resources/templates/member/login.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" layout:decorate="~{layout/layout}"
+      layout:fragment="Content"  xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" type="text/css" href="/css/top.css">
     <link rel="stylesheet" type="text/css" href="/css/login.css">
     <title>로그인</title>
 </head>
 <body>
-<div th:replace="~{inc/top}"></div>
 <section>
     <form action="/login_proc" method="post">
         <div id="login">
@@ -26,6 +25,5 @@
         <a href="">비밀번호 찾기</a>
     </div>
 </section>
-<div th:replace="~{inc/footer}"></div>
 </body>
 </html>
